--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "esbuild-wasm": "0.8.27",
+    "i18next": "^19.8.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.6",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
     "sass": "^1.32.7",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
