--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react-dom": "^17.0.0",
     "esbuild-wasm": "0.8.27",
     "i18next": "^19.8.7",
+    "i18next-browser-languagedetector": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.6",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "sass": "^1.32.7",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
